# ndn-sd

./: .gitmodules  CMakeLists.txt  README.md
build3/src/ndnshare/: Makefile
cmake/: FindBonjour.cmake  Findcnl-cpp.cmake  Finddocopt.cmake  Findndn-ind-tools.cmake  Findndn-ind.cmake
include/ndn-sd/: ndn-sd.hpp
src/mfdexample/: CMakeLists.txt  main.cpp
src/ndn-sd/: CMakeLists.txt  config.hpp.in  ndn-sd.cpp
src/ndnapp/: CMakeLists.txt  identity-manager.cpp  identity-manager.hpp  key-chain-manager.cpp  key-chain-manager.hpp  logging.hpp  mime.cpp  ndnapp.cpp  ndnapp.hpp  uuid.cpp
src/ndnshare/: CMakeLists.txt  config.hpp.in  fileshare.cpp  fileshare.hpp  key-chain-manager.cpp  key-chain-manager.hpp  logging.hpp  main.cpp  mime.hpp  ndnapp.cpp  ndnapp.hpp  uuid.hpp
test/: CMakeLists.txt  key-chain-manager-test.cpp  ndnsd-test.cpp
test/data/: encrypted.safebag
